--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <div class="top-bar w-100">
     <div class="container">
         <div class="col-12 text-right">
-            <p><a href="https//wa.me/233541507924">chat us on (+233) 541507924</a></p>
+            <p><a href="https://wa.me/233541507924">chat us on (+233) 541507924</a></p>
         </div>
     </div>
 </div>
@@ -218,10 +218,10 @@
                 <p class="col-sm-12 col-md-12 col-lg-12"> Email: dinewiththeneedy@gmail.com</p>
                 <p>connect with us on all our social media handles</p>
                     <ul class="social pt-3">
-                        <li><a href="https//www.facebook.com/Dine With The Needy" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="https//www.twitter.com/Dine With The Needy" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="https//www.instagram.com/Dine With The Needy" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="https//wa.me/233541507924" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+                        <li><a href="https://www.facebook.com/Dine With The Needy" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://www.twitter.com/Dine With The Needy" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/Dine With The Needy" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://wa.me/233541507924" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
                     </ul>	
     
                 
