--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-8 bg-custom d-md-block py-3 px-0">
-                    <h1>Let us </h1>
+                    <h3>Get in touch </h3>
                     <div class="border-top border-primary w-50 mx-auto mr-2">
                   
 
