--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		<div class="col-md-4 my-4">
 			<!-- <img src="img/LOGO.png" alt="" class="w-100"> -->
 			<h4 class="my-4">"Our Mission"</h4>
-			<p>To generate resources through fundraisong initiatives and community patnerships, and to use those funds 
+			<p>To generate resources through fundraising initiatives and community patnerships, and to use those funds 
 				to make positive impacts in ...
 			</p>
 			<a href="about.html#mission" class="btn btn-outline-dark btn-md">read more </a>
