--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
                 , dreams and full potential. To transform communities.
             </p>
             <p>To transform communities through helping children, youth and the their families who need support
-                to ensure that this mission is written in way that is consistent with our mission.
+                to ensure that this mission is written in a way that is consistent with our mission.
             </p>
 			<!-- <a href="#" class="btn btn-outline-dark btn-md">find out</a> -->
 		</div>
