--- a/project.html
+++ b/project.html
@@ -371,13 +371,13 @@
     
             <div class="col-sm-10 col-md-8 col-lg-6">
                 <img src="img/LOGO.png" alt="">
-                <p> &copy;2020 DWNF - All rights reserved.</p>
-                <p class="col-sm-12 col-md-12 col-lg-12"> Email: dinewiththeneedy@gmail.com</p>
+                <p> &copy;2020 DWNF All rights reserved.</p>
+                <p class="col-sm-12 col-md-12 col-lg-12"> Email: enochpentop1999@gmail.com</p>
                 <p>connect with us on all our social media handles</p>
                     <ul class="social pt-3">
-                        <li><a href="https://www.facebook.com/Dine With The Needy" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="https://www.twitter.com/Dine With The Needy" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="https://www.instagram.com/Dine With The Needy" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/Dine With The Needy/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://www.twitter.com/EnochcitySnr/" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/dine_with_the_needy/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                         <li><a href="https://wa.me/233541507924" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
                     </ul>	
     
