--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
             <div class="column right">
                 <div class="text"> Message Us</div>
 
-                <form action="#">
+                <form action="mailto:isaacoseianane@gmail.com" method="post" enctype="text/plain">
                     <div class="fields">
                         <div class="field name">
                             <input type="text" placeholder="Name" required>
